objects/adapps__OptimizerPlus_User_Logins_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Days__c</fullName>
        <label>Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adapps__Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Lately</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Recently</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Rarely</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>adapps__User_Login__c</fullName>
        <label>User Login</label>
        <referenceTo>adapps__OptimizerPlus_User_Logins__c</referenceTo>
        <relationshipLabel>User Login Items</relationshipLabel>
        <relationshipName>User_Login_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>User LoginItem</label>
    <nameField>
        <label>User Login Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User LoginItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>